--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,12 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-twitter_username:
+facebook_username: iaiinstitute
+
+twitter_username: iaiinstitute
+
+linkedin_username: iai-institute
+
 github_username: NeoBreath
 
 # Build settings
